// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageSend has the expected html structure 1`] = `
<div
  class="ni-page"
>
  <header
    class="ni-page-header"
  >
    <div
      class="ni-page-header-container"
    >
      <div
        class="ni-page-header-text"
      >
        <div
          class="ni-page-header-title"
        >
          <h2>
            Send
          </h2>
        </div>
        <div
          class="ni-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="ni-page-header-menu"
      >
        <div>
          <div>
            <div
              class="ni-tool-bar"
            >
              <div
                class="ni-tool-bar-container"
              >
                <div
                  class="main"
                />
                <a
                  class="back"
                >
                  <i
                    class="material-icons"
                  >
                    arrow_back
                  </i>
                </a>
                <a
                  class="help"
                >
                  <i
                    class="material-icons"
                  >
                    help_outline
                  </i>
                </a>
                <a
                  class="sign-out"
                >
                  <i
                    class="material-icons"
                  >
                    exit_to_app
                  </i>
                </a>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="ni-page-main ps"
  >
    <form
      class="ni-form"
    >
      <div
        class="ni-form-container"
      >
        <!---->
        <main
          class="ni-form-main"
        >
          <section
            class="ni-part"
          >
            <div
              class="ni-part-container"
            >
              <header
                class="ni-part-header"
              >
                <div
                  class="ni-part-header-container"
                >
                  <div
                    class="ni-part-title h5"
                  >
                    Denomination Options
                  </div>
                  <menu
                    class="ni-part-menu"
                  />
                </div>
              </header>
              <main
                class="ni-part-main"
              >
                <div
                  class="ni-form-group"
                >
                  <!---->
                  <label
                    class="ni-form-group__label"
                    for="send-denomination"
                  >
                    Denomination
                  </label>
                  <div
                    class="ni-form-group__field"
                  >
                    <div
                      class="ni-select"
                      id="send-denomination"
                    >
                      <select
                        class="ni-field ni-field-select"
                      >
                        <option
                          disabled="disabled"
                          hidden="hidden"
                          selected="selected"
                          value=""
                        >
                          Select token...
                        </option>
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <option
                          value="mycoin"
                        >
                          MYCOIN
                        </option>
                        <option
                          value="fermion"
                        >
                          FERMION
                        </option>
                      </select>
                      <div
                        class="ni-field-select-addon"
                      >
                        <i
                          class="material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <!---->
                  </div>
                </div>
              </main>
            </div>
          </section>
          <section
            class="ni-part"
          >
            <div
              class="ni-part-container"
            >
              <header
                class="ni-part-header"
              >
                <div
                  class="ni-part-header-container"
                >
                  <div
                    class="ni-part-title h5"
                  >
                    Transaction Details
                  </div>
                  <menu
                    class="ni-part-menu"
                  />
                </div>
              </header>
              <main
                class="ni-part-main"
              >
                <div
                  class="ni-form-group"
                >
                  <!---->
                  <label
                    class="ni-form-group__label"
                    for="send-zone-id"
                  >
                    Zone ID
                  </label>
                  <div
                    class="ni-form-group__field"
                  >
                    <div
                      class="ni-select"
                      id="send-zone-id"
                    >
                      <select
                        class="ni-field ni-field-select"
                      >
                        <option
                          disabled="disabled"
                          hidden="hidden"
                          selected="selected"
                          value=""
                        >
                          Select zone...
                        </option>
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <option
                          value="basecoind-demo1"
                        >
                          basecoind-demo1
                        </option>
                        <option
                          value="basecoind-demo2"
                        >
                          basecoind-demo2
                        </option>
                      </select>
                      <div
                        class="ni-field-select-addon"
                      >
                        <i
                          class="material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <!---->
                  </div>
                </div>
                <div
                  class="ni-form-group"
                >
                  <!---->
                  <label
                    class="ni-form-group__label"
                    for="send-address"
                  >
                    Send To
                  </label>
                  <div
                    class="ni-form-group__field"
                  >
                    <div
                      class="ni-field-group"
                    >
                      <input
                        class="ni-field"
                        id="send-address"
                        placeholder="Address"
                        type="text"
                      />
                    </div>
                    <div
                      class="ni-form-msg sm ni-form-msg--error"
                    >
                      Address is required
                    </div>
                    <div
                      class="ni-form-msg sm ni-form-msg--error"
                    >
                      Address must be exactly 40 characters
                    </div>
                    <div
                      class="ni-form-msg sm ni-form-msg--error"
                    >
                      Address must contain only alphanumeric characters
                    </div>
                  </div>
                </div>
                <div
                  class="ni-form-group"
                >
                  <!---->
                  <label
                    class="ni-form-group__label"
                    for="send-amount"
                  >
                    Amount
                  </label>
                  <div
                    class="ni-form-group__field"
                  >
                    <div
                      class="ni-field-group"
                    >
                      <input
                        class="ni-field"
                        id="send-amount"
                        placeholder="Amount"
                        type="number"
                      />
                    </div>
                    <div
                      class="ni-form-msg sm ni-form-msg--error"
                    >
                      Amount is required
                    </div>
                    <!---->
                  </div>
                </div>
              </main>
            </div>
          </section>
        </main>
        <footer
          class="ni-form-footer"
        >
          <div>
            <div />
            <button
              class="ni-btn"
            >
              <span
                class="ni-btn__container ni-btn--primary"
              >
                <!---->
                <!---->
                <span
                  class="ni-btn__value"
                >
                  Send Tokens
                </span>
              </span>
            </button>
          </div>
        </footer>
      </div>
    </form>
    <div
      class="ps__rail-x"
      style="left: 0px; top: 0px;"
    >
      <div
        class="ps__thumb-x"
        style="left: 0px; width: 0px;"
        tabindex="0"
      />
    </div>
    <div
      class="ps__rail-y"
      style="top: 0px; left: 0px;"
    >
      <div
        class="ps__thumb-y"
        style="top: 0px; height: 0px;"
        tabindex="0"
      />
    </div>
  </main>
</div>
`;

exports[`PageSend should show notification for unsuccessful send 1`] = `
Object {
  "body": "An error occurred while trying to send: \\"Cannot read property 'amount' of undefined\\"",
  "icon": "error",
  "layout": "alert",
  "time": 1608,
  "title": "Error Sending",
  "type": "error",
}
`;

exports[`PageSend should work without providing a default denom 1`] = `
<div
  class="ni-page"
>
  <header
    class="ni-page-header"
  >
    <div
      class="ni-page-header-container"
    >
      <div
        class="ni-page-header-text"
      >
        <div
          class="ni-page-header-title"
        >
          <h2>
            Send
          </h2>
        </div>
        <div
          class="ni-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="ni-page-header-menu"
      >
        <div>
          <div>
            <div
              class="ni-tool-bar"
            >
              <div
                class="ni-tool-bar-container"
              >
                <div
                  class="main"
                />
                <a
                  class="back"
                >
                  <i
                    class="material-icons"
                  >
                    arrow_back
                  </i>
                </a>
                <a
                  class="help"
                >
                  <i
                    class="material-icons"
                  >
                    help_outline
                  </i>
                </a>
                <a
                  class="sign-out"
                >
                  <i
                    class="material-icons"
                  >
                    exit_to_app
                  </i>
                </a>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="ni-page-main"
  >
    <form
      class="ni-form"
    >
      <div
        class="ni-form-container"
      >
        <!---->
        <main
          class="ni-form-main"
        >
          <section
            class="ni-part"
          >
            <div
              class="ni-part-container"
            >
              <header
                class="ni-part-header"
              >
                <div
                  class="ni-part-header-container"
                >
                  <div
                    class="ni-part-title h5"
                  >
                    Denomination Options
                  </div>
                  <menu
                    class="ni-part-menu"
                  />
                </div>
              </header>
              <main
                class="ni-part-main"
              >
                <div
                  class="ni-form-group"
                >
                  <!---->
                  <label
                    class="ni-form-group__label"
                    for="send-denomination"
                  >
                    Denomination
                  </label>
                  <div
                    class="ni-form-group__field"
                  >
                    <div
                      class="ni-select"
                      id="send-denomination"
                    >
                      <select
                        class="ni-field ni-field-select"
                      >
                        <option
                          disabled="disabled"
                          hidden="hidden"
                          selected="selected"
                          value=""
                        >
                          Select token...
                        </option>
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                      </select>
                      <div
                        class="ni-field-select-addon"
                      >
                        <i
                          class="material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <div
                      class="ni-form-msg sm ni-form-msg--error"
                    >
                      Denomination is required
                    </div>
                  </div>
                </div>
              </main>
            </div>
          </section>
          <section
            class="ni-part"
          >
            <div
              class="ni-part-container"
            >
              <header
                class="ni-part-header"
              >
                <div
                  class="ni-part-header-container"
                >
                  <div
                    class="ni-part-title h5"
                  >
                    Transaction Details
                  </div>
                  <menu
                    class="ni-part-menu"
                  />
                </div>
              </header>
              <main
                class="ni-part-main"
              >
                <div
                  class="ni-form-group"
                >
                  <!---->
                  <label
                    class="ni-form-group__label"
                    for="send-zone-id"
                  >
                    Zone ID
                  </label>
                  <div
                    class="ni-form-group__field"
                  >
                    <div
                      class="ni-select"
                      id="send-zone-id"
                    >
                      <select
                        class="ni-field ni-field-select"
                      >
                        <option
                          disabled="disabled"
                          hidden="hidden"
                          selected="selected"
                          value=""
                        >
                          Select zone...
                        </option>
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <!---->
                        <option
                          value="basecoind-demo1"
                        >
                          basecoind-demo1
                        </option>
                        <option
                          value="basecoind-demo2"
                        >
                          basecoind-demo2
                        </option>
                      </select>
                      <div
                        class="ni-field-select-addon"
                      >
                        <i
                          class="material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <!---->
                  </div>
                </div>
                <div
                  class="ni-form-group"
                >
                  <!---->
                  <label
                    class="ni-form-group__label"
                    for="send-address"
                  >
                    Send To
                  </label>
                  <div
                    class="ni-form-group__field"
                  >
                    <div
                      class="ni-field-group"
                    >
                      <input
                        class="ni-field"
                        id="send-address"
                        placeholder="Address"
                        type="text"
                      />
                    </div>
                    <div
                      class="ni-form-msg sm ni-form-msg--error"
                    >
                      Address is required
                    </div>
                    <div
                      class="ni-form-msg sm ni-form-msg--error"
                    >
                      Address must be exactly 40 characters
                    </div>
                    <div
                      class="ni-form-msg sm ni-form-msg--error"
                    >
                      Address must contain only alphanumeric characters
                    </div>
                  </div>
                </div>
                <div
                  class="ni-form-group"
                >
                  <!---->
                  <label
                    class="ni-form-group__label"
                    for="send-amount"
                  >
                    Amount
                  </label>
                  <div
                    class="ni-form-group__field"
                  >
                    <div
                      class="ni-field-group"
                    >
                      <input
                        class="ni-field"
                        id="send-amount"
                        placeholder="Amount"
                        type="number"
                      />
                    </div>
                    <div
                      class="ni-form-msg sm ni-form-msg--error"
                    >
                      Amount is required
                    </div>
                    <!---->
                  </div>
                </div>
              </main>
            </div>
          </section>
        </main>
        <footer
          class="ni-form-footer"
        >
          <div>
            <div />
            <button
              class="ni-btn"
            >
              <span
                class="ni-btn__container ni-btn--primary"
              >
                <!---->
                <!---->
                <span
                  class="ni-btn__value"
                >
                  Send Tokens
                </span>
              </span>
            </button>
          </div>
        </footer>
      </div>
    </form>
  </main>
</div>
`;
